# geotiff-tiler

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: create_patches.ipynb
examples/data/: image.tif  label.tif
geotiff_tiler/: merger.py  tiler.py  tiling_checkpoint.py  tiling_manifest.py  val.py
geotiff_tiler/config/: log_config.yaml  logging_config.py
geotiff_tiler/utils/: build_targets.py  checks.py  geoutils.py  io.py  memory_profiler.py  road_targets.py  vector.py  visualization.py
src/: tiler.py
src/config/: logging_config.py
src/utils/: checks.py  geoutils.py  io.py  stacitem.py  visualization.py
